--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.card{
+border: 3px solid black;
+height: 200px;
+width: 200px;
+margin: 10px 10px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+flex-wrap: wrap-reverse
 }
+.card-name{
+  border: 1px solid black;
+  height: 30px;
+  width: 100%;
+}
+.card-container{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.card-rating{
+  border: 1px solid black;
+  height: 30px;
+  width: 70%;
+  
+}
+.main{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search-bar{
+display: flex;
+flex-direction: row;
+justify-content: center;
+margin-bottom: 100px;
+margin-top: 40px;
 }
-
-.App-link {
-  color: #61dafb;
+.input{
+  width: 50%;
+  height: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-btn{
+  height: 46px;
+  width: 10%; 
 }
+.min-rating{
+  height: 46px;
+  width: 10%; 
+}
+.parg{
+  margin: 0;
+  padding: 0 5px;
+}
+.min-rating-stars{
+  padding: 0 5px;
+  font-size: 25px;
+} 
